# django-public-url

./: .gitignore  pyproject.toml
core/: urls.py
core/settings/: __init__.py  base.py  channel_layers.py
images/: models.py  serializers.py  urls.py  views.py
images/migrations/: 0001_initial.py
